Fixed alignment of main menu

--- a/style.css
+++ b/style.css
@@ -4,17 +4,18 @@ body {
 	font-family: sans-serif;
 }
 
+
 .dropdown {
 	position: absolute;
 	top: 50%;
-	left: 43%;
+	left: 42.5%;
 	transform: translate(-50%, -50%);
 }
 
 .highscore {
 	position: absolute;
 	top: 50%;
-	left: 54%;
+	left: 57.5%;
 	transform: translate(-50%, -50%);
 }
 
@@ -22,6 +23,7 @@ button {
 	position: relative;
 	width: 200px;
 	height: 60px;
+	border: 20px;
 	font-size: 24px;
 	background: #2196f3;
 	border: none;
